[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcdev"
version = "1.1.0"
authors = [
  { name="M. Makowski, J. Granat, A. Shekhovtsov", email="marek@iiasa.ac.at" },
]
description = "mcdev is a software written in Python which main purpose is solving Multi-criteria Model Analysis problem."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "Pyomo",
    "PyYAML",
    "seaborn",
    "glpk",
    "dill",
    "numpy",
    "matplotlib",
    "pandas",
    "scipy",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]

[project.scripts]
mcdev = "mcdev:mcma.main"

[project.urls]
Homepage = "https://github.com/marek-iiasa/mcdev"
Issues = "https://github.com/marek-iiasa/mcdev/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
mcdev = ["wdir/*"]
